# flplusplus

./: .gitignore  CMakeLists.txt  README  README.md  build_linux.sh  flplusplus.ini  mingw-w64-i686.cmake
.github/workflows/: build-release.yml
flplusplus/: CMakeLists.txt
flplusplus/def/: Common.def
flplusplus/include/: flplusplus.h
flplusplus/src/: Common.cpp  Common.h  codec.cpp  codec.h  config.cpp  config.h  consolewindow.cpp  consolewindow.h  flplusplus.cpp  fontresource.cpp  fontresource.h  graphics.cpp  graphics.h  jumptable.h  log.cpp  log.h  offsets.h  patch.cpp  patch.h  savegame.cpp  savegame.h  screenshot.cpp  screenshot.h  shippreviewscroll.cpp  shippreviewscroll.h  startlocation.cpp  startlocation.h  thnplayer.cpp  thnplayer.h
flplusplus/src/adoxa/: adoxa.cpp  adoxa.h  adoxacommon.h  porting notes.txt  wheelscroll.cpp
